# zcalc

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  TODO.md  main.cpp
benchmark/: CMakeLists.txt  main.cpp
client/: main.html  main.js
client/assets/font/: resize.sh
client/src/: button.js  canvas.js  component.js  defines.js  edit_area.js  jbox.js  menu.js  network.js  node.js  playground.js  scene.js  source.js  terminal.js  wire.js
client/src/components/microelectronics/: ammeter.js  capacitor.js  coupled_inductor.js  current_controlled_current_source.js  current_controlled_voltage_source.js  current_source.js  four_pole.js  gyrator.js  ideal_amplifier.js  ideal_transformer.js  inductor.js  resistor.js  two_pole.js  voltage_controlled_current_source.js  voltage_controlled_voltage_source.js  voltage_source.js  voltmeter.js
client/src/controls/: button.js  char.js  font.js  text_box.js
client/src/loads/: lamp.js  motor.js
client/src/switches/: s101.js  s102.js  s106.js  scontactor.js  stime.js
containers/devcontainer/: .vimrc  Dockerfile  build.ps1  build.sh  run.ps1  run.sh
containers/devcontainer/scripts/: build.sh  bundle.sh  clean.sh  purge.sh  test.sh
containers/nginx/: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  notes  stop.sh
containers/server/: Dockerfile  main.html  server.py
examples/: CMakeLists.txt
examples/bandpass/: bandpass.cpp
examples/basic/: basic.cpp
examples/bluetooth/: bluetooth.cpp
examples/capacitor/: capacitor.cpp
examples/filter/: filter.cpp
examples/lc_filter/: lc_filter.cpp
examples/lora_filter/: lora_filter.cpp
examples/rc_element/: rc_element.cpp
include/: capacitor.hpp  common.hpp  complex.hpp  component.hpp  cycle.hpp  expression.hpp  impedance.hpp  inductor.hpp  linear_equation.hpp  linear_equation_system.hpp  matrix.hpp  matrix_template.hpp  network.hpp  node.hpp  resistor.hpp  source.hpp  tmp.hpp
include/zcalc/: capacitor.hpp  common.hpp  complex.hpp  component.hpp  cycle.hpp  impedance.hpp  inductor.hpp  linear_equation.hpp  linear_equation_system.hpp  matrix.hpp  network.hpp  network_builder.hpp  network_calculator.hpp  network_old.hpp  node.hpp  plotter.hpp  resistor.hpp  source.hpp
include/zcalc/component/: ammeter.hpp  capacitor.hpp  component.hpp  coupled_inductor_half.hpp  current_controlled_current_source.hpp  current_controlled_voltage_source.hpp  current_source.hpp  dependent_source.hpp  four_pole.hpp  gyrator_half.hpp  ideal_transformer_half.hpp  impedance.hpp  inductor.hpp  open_circuit.hpp  resistor.hpp  short_circuit.hpp  source.hpp  two_pole.hpp  voltage_controlled_current_source.hpp  voltage_controlled_voltage_source.hpp  voltage_controller_voltage_source.hpp  voltage_source.hpp  voltmeter.hpp
include/zcalc/equation/: a.out  equation.hpp  main.cpp
include/zcalc/expression/: constant.hpp  expression.hpp  operation.hpp  rule.hpp  rule_pool.hpp  term.hpp  term_factory.hpp  variable.hpp  variable_pool.hpp
include/zcalc/graph/: cycles.hpp  edge.hpp  graph.hpp  path.hpp  vertex.hpp
include/zcalc/internal/: complex.hpp  component.hpp  equation_system.hpp  fraction.hpp  gate.hpp  linear_equation.hpp  linear_equation_system.hpp  loop_message.hpp  matrix.hpp  node.hpp
include/zcalc/json/: element.hpp  parser.hpp
include/zcalc/math/: complex.hpp  frequency.hpp  linear_equation.hpp  linear_equation_system.hpp  matrix.hpp  monomial.hpp  phase.hpp  phasor.hpp  symbolic_linear_equation.hpp  symbolic_linear_equation_system.hpp
include/zcalc/new/: a.out  component.hpp  equation_system.hpp  main.cpp  network.hpp
include/zcalc/plot/: bode.hpp  bode_plot.hpp  canvas.hpp  colors.hpp  figure.hpp  magnitude_plot.hpp  phase_plot.hpp  plot.hpp  plotter.hpp  scatter_plot.hpp  shapes.hpp
include/zcalc/plot/html/: canvas.hpp  colors.hpp  figure.hpp  html_drawer.hpp  plot.hpp  plotter.hpp  shapes.hpp
server/: CMakeLists.txt  client.py  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
source/: CMakeLists.txt  capacitor.cpp  complex.cpp  component.cpp  cycle.cpp  expression.cpp  impedance.cpp  inductor.cpp  linear_equation_system.cpp  matrix.cpp  network.cpp  resistor.cpp  source.cpp
source/expression/: constant.hpp  operation.hpp  term.hpp  variable_pool.hpp
source/zcalc/: CMakeLists.txt
source/zcalc/expression/: CMakeLists.txt  constant.cpp  expression.cpp  operation.cpp  rule.cpp  rule_pool.cpp  term_factory.cpp  variable.cpp  variable_pool.cpp
test/: CMakeLists.txt  basic_network_test.cpp  complex_test.cpp  cycle_test.cpp  edge_test.cpp  equ_sys_test.cpp  expression_test.cpp  fraction_test.cpp  graph_test.cpp  json_test.cpp  linear_equation_system_test.cpp  linear_equation_test.cpp  main.cpp  matrix_test.cpp  network_calculator_test.cpp  network_json_test.cpp  path_test.cpp  symbolic_linear_equation_test.cpp
test/expression/: CMakeLists.txt  constant_rule_test.cpp  constant_test.cpp  expression_test.cpp  operation_test.cpp  simple_rule_test.cpp  simplification_test.cpp  variable_test.cpp
